changes main buttons, fixes spacing with navbar links, changes centering with dark mode switch

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -11,6 +11,12 @@
   }
 }
 
+@media (min-width: 1500px) and (max-width: 1600px) {
+  .custom-margin {
+    margin-left: 5rem;
+  }
+}
+
 /* @font-face {
   font-family: 'Fira Mono';
   font-style: normal;
